# solana-sample

./: Anchor.toml  README.md
app/: main.ts
programs/anchor-code/: Cargo.toml
programs/anchor-code/src/: lib.rs
tests/: anchor-code.ts
